<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resumen_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="?android:attr/colorBackground"
    tools:context=".ResumenActivity">

    <TextView
        android:id="@+id/tv_resumen_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_resumen"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/tv_resumen_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_resumen_datos"
        android:textSize="18sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_resumen_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?attr/colorOnBackground"
        tools:text="Usuario: miUsuario\nEmail: correo@ejemplo.com\nSexo: Masculino"/>

    <Button
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_volver_formulario"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary" />

    <Button
        android:id="@+id/btn_modo_claro_oscuro_resumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_modo_claro_oscuro_resumen"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary" />
</LinearLayout>